--- a/css/style.css
+++ b/css/style.css
@@ -174,32 +174,32 @@
   border-width: 5px; }
 
 .primary-black--hover {
-  background: #dd6b4d;
+  background: #218a50;
   color: #fff; }
   .primary-black--hover:hover {
     background: #000;
     color: #fff; }
 
 .primary-dark--hover {
-  background: #dd6b4d;
+  background: #218a50;
   color: #fff; }
   .primary-dark--hover:hover {
     background: gray;
     color: #fff; }
 
 .primary-primary-outline--hover {
-  background: #dd6b4d;
+  background: #218a50;
   color: #fff; }
   .primary-primary-outline--hover:hover {
-    border-color: #dd6b4d;
+    border-color: #218a50;
     background: transparent; }
 
 .primary-outline-primary--hover {
   background: transparent;
-  border-color: #dd6b4d; }
+  border-color: #218a50; }
   .primary-outline-primary--hover:hover {
     color: #fff;
-    background: #dd6b4d; }
+    background: #218a50; }
 
 body {
   line-height: 1.7;
@@ -275,7 +275,7 @@ h1, h2, h3, h4, h5,
   background: #fff !important;
   font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
   .form-control:active, .form-control:focus {
-    border-color: #dd6b4d; }
+    border-color: #218a50; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
@@ -417,7 +417,7 @@ h1, h2, h3, h4, h5,
   .ul-check.success li:before {
     color: #8bc34a; }
   .ul-check.primary li:before {
-    color: #dd6b4d; }
+    color: #218a50; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
@@ -470,9 +470,9 @@ h1, h2, h3, h4, h5,
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active {
-      color: #dd6b4d !important;
+      color: #218a50 !important;
       display: inline-block;
-      border-bottom: 2px solid #dd6b4d; }
+      border-bottom: 2px solid #218a50; }
     .site-navbar .site-navigation .site-menu a {
       text-decoration: none !important;
       display: inline-block; }
@@ -487,7 +487,7 @@ h1, h2, h3, h4, h5,
         text-decoration: none !important;
         border-bottom: 2px solid transparent; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #dd6b4d; }
+          color: #218a50; }
     .site-navbar .site-navigation .site-menu .has-children {
       position: relative; }
       .site-navbar .site-navigation .site-menu .has-children > a {
@@ -509,7 +509,7 @@ h1, h2, h3, h4, h5,
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #dd6b4d;
+        border-top: 2px solid #218a50;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         border-left: 1px solid #edf0f5;
@@ -546,7 +546,7 @@ h1, h2, h3, h4, h5,
           transition: 0s all;
           color: #343a40; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #dd6b4d !important; }
+          color: #218a50 !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -568,7 +568,7 @@ h1, h2, h3, h4, h5,
             background: #f4f5f9;
             color: #25262a; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #dd6b4d; }
+        color: #218a50; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -648,12 +648,12 @@ h1, h2, h3, h4, h5,
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #dd6b4d; }
+        color: #218a50; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li .nav-link.active {
-        color: #dd6b4d; }
+        color: #218a50; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -740,11 +740,11 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2);
     box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2); }
     .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-      color: #dd6b4d; }
+      color: #218a50; }
     .sticky-wrapper.is-sticky .site-navbar ul li a {
       color: #000 !important; }
       .sticky-wrapper.is-sticky .site-navbar ul li a.active {
-        color: #dd6b4d !important; }
+        color: #218a50 !important; }
   .sticky-wrapper .shrink {
     padding-top: 0px !important;
     padding-bottom: 0px !important; }
@@ -821,7 +821,7 @@ h1, h2, h3, h4, h5,
 
 .block-heading-1 h2 {
   font-size: 3rem;
-  color: #dd6b4d; }
+  color: #218a50; }
 
 .block-feature-1-wrap {
   margin-bottom: 7rem; }
@@ -960,7 +960,7 @@ h1, h2, h3, h4, h5,
       -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
       transform: translateX(-50%);
-      background: #dd6b4d;
+      background: #218a50;
       height: 2px; }
     .block-testimony-1 figure img {
       max-width: 60px; }
@@ -984,7 +984,7 @@ h1, h2, h3, h4, h5,
       border-radius: 50%;
       background: #cccccc; }
     .block-13 .owl-dots .owl-dot.active span {
-      background: #dd6b4d; }
+      background: #218a50; }
 
 .post-entry {
   background: #fff;
@@ -1006,7 +1006,7 @@ h1, h2, h3, h4, h5,
   color: #000;
   border-bottom: 1px dotted #ccc; }
   .by:hover {
-    border-bottom: 1px dotted #dd6b4d; }
+    border-bottom: 1px dotted #218a50; }
 
 .form-control {
   border: none;
